fixed mobile horizontal scroll

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -814,6 +814,8 @@ body{
 #tinkerings{
 	width: 100vw;
 	margin: 15vh 5vw 10vh 5vw;
+	overflow-x: hidden;
+	max-width: 100vw;
 /*	z-index: 1;*/
 /*	color: $blackblue;*/
 
